# DevOps-Course-Starter-v2

./: .dockerignore  .env.j2  .env.template  .env.test  .gitignore  .terraform.lock.hcl  Dockerfile  README.md  ansible-inventory.ini  ansible-playbook.yml  main.tf  outputs.tf  pyproject.toml  variables.tf
.github/workflows/: my-ci-pipeline.yml
todo_app/: app.py  oauth.py  python.conf  test_app.py  test_view_model.py  view_model.py
todo_app/data/: mongo_db_items.py  trello_items.py
todo_app/templates/: index.html
